--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
@@ -25,22 +25,22 @@
         </nav>
     </header>
     <img alt ="Image of a team working on a project."class="hero"></img>
-    <main class="content">
-        <section class="search-engine-optimization">
+    <main>
+        <section id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Image of the pillars of SEO, writen in a notebook." class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
+        <section id="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="Image of increasing reputation on a graph." class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
+        <section id="social-media-marketing">
             <img src="./assets/images/social-media-marketing.jpg" alt="Image of people on tech devices with social media jargon." class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
@@ -49,21 +49,21 @@
         </section>
     </main>
     <section class="benefits">
-        <section class="benefit-lead">
+        <section id="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Icon representing concept lead generation." />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section id="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="Icon representing concept brand awareness." />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section id="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Icon representing concept cost management."></img>
             <p>
@@ -71,7 +71,7 @@
             </p>
         </section>
     </section>
-    <footer class="footer">
+    <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2023 Horiseon Social Solution Services, Inc.
