Fixed bug of .hero incorrect display

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -24,7 +24,7 @@
             </ul>
         </nav>
     </header>
-    <img alt ="Image of a team working on a project."class="hero"></img>
+    <div alt="Image of a team working on a project."class="hero"></div>
     <main>
         <section id="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Image of the pillars of SEO, writen in a notebook." class="float-left" />
